Updating all my details

--- a/index.html
+++ b/index.html
@@ -17,22 +17,30 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a recent Bachelor of Commerce (Major: Finance & Minor: Information Systems & Business Analysis) graduate looking to develop my skills in software development that I learnt during my degree.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Born & raised in Sydney, Australia</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <ul>
+        <li>Basketball</li>
+        <li>Gym/Fitness</li>
+        <li>Photography & Photo editing</li>
+        <li>Spending time with friends & family</li>
+      </ul>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would like to be a senior software engineer/manager for a large IT company where I manage a team of skilled developers to create effective products to our client's needs.
+        </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Sydney, Australia</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>As society is becoming more technologically dependent and internet driven, I believe it would be an invaluable skill to be able to understand how web based technology works and how to create it.</p>
+        <br>
+      <p>I have a deep interest in technology and how it ultimately impacts our day to day lives; I hope with my skills as a web developer I will be able to provide valuable service to clients and/or stakeholders by creating products that are meaningful to the end users</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/Jermayy">Github</a></li>
         </ul>
     </footer>
 </body>
