Fixed detail spacing and grammar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a recent Bachelor of Commerce (Major: Finance & Minor: Information Systems & Business Analysis) graduate looking to develop my skills in software development that I learnt during my degree.</p>
+      <p>I am a recent Bachelor of Commerce graduate (Major: Finance & Minor: Information Systems & Business Analysis) looking to develop my skills in software development that I learnt during my degree.</p>
       <h1>Where I'm From</h1>
       <p>Born & raised in Sydney, Australia</p>
       <h1>What are your favorite hobbies?</h1>
@@ -34,7 +34,6 @@
       <p>Sydney, Australia</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>As society is becoming more technologically dependent and internet driven, I believe it would be an invaluable skill to be able to understand how web based technology works and how to create it.</p>
-        <br>
       <p>I have a deep interest in technology and how it ultimately impacts our day to day lives; I hope with my skills as a web developer I will be able to provide valuable service to clients and/or stakeholders by creating products that are meaningful to the end users</p>
     </section>
 
